@@ -3,6 +3,8 @@ abstract: "Toolforge Mix'n'match tool object print routines."
 author:
   - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
+  English: 0
+  Error::Pure::Utils: 0
   ExtUtils::MakeMaker: 6.59
   Test::More: 0
   Test::NoWarnings: 0
@@ -22,6 +24,7 @@ no_index:
     - t
     - xt
 requires:
+  Error::Pure: 0
   Indent: 0
   perl: 5.6.2
 resources:
