@@ -4,7 +4,9 @@ TODO
 2. Dokumentace pro User
 3. Dokumentace pro YearMonth
 4. Testy.
-5.
+6.
 
 Applied
 =======
+5. Check na objekty.
+OK [20201222] skim
