@@ -1,7 +1,9 @@
 use strict;
 use warnings;
 
-use Test::More 'tests' => 2;
+use English;
+use Error::Pure::Utils qw(clean);
+use Test::More 'tests' => 4;
 use Test::NoWarnings;
 use Toolforge::MixNMatch::Object::User;
 use Toolforge::MixNMatch::Print::User;
@@ -14,3 +16,18 @@ my $obj = Toolforge::MixNMatch::Object::User->new(
 );
 my $ret = Toolforge::MixNMatch::Print::User::print($obj);
 is($ret, 'skim (1): 10', 'Print user.');
+
+# Test.
+eval {
+	Toolforge::MixNMatch::Print::User::print();
+};
+is($EVAL_ERROR, "Object doesn't exist.\n", "Object doesn't exist.");
+clean();
+
+# Test.
+eval {
+	Toolforge::MixNMatch::Print::User::print('bad');
+};
+is($EVAL_ERROR, "Object isn't 'Toolforge::MixNMatch::Object::User'.\n",
+	"Object isn't 'Toolforge::MixNMatch::Object::User'.");
+clean();
